fixed whitespace bug and fontsize of footer

--- a/src/components/HamburgerMenu/HamburgerMenu.css
+++ b/src/components/HamburgerMenu/HamburgerMenu.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 950px) {
 	#ham {
 		display: inline-block !important;
 	}
